@@ -1,77 +1,0 @@
-#!/bin/sh
-#
-#  Copyright (C) 2007 The Regents of the University of California.
-#  Produced at Lawrence Livermore National Laboratory (cf, DISCLAIMER).
-#  Written by Ira Weiny weiny2@llnl.gov
-#  UCRL-CODE-235440
-#  
-#  This file is part of pragmatic-infiniband-tools (PIU), useful tools to manage
-#  Infiniband Clusters.
-#  For details, see http://www.llnl.gov/linux/.
-#  
-#  PIU is free software; you can redistribute it
-#  and/or modify it under the terms of the GNU General Public License as
-#  published by the Free Software Foundation; either version 2 of the License,
-#  or (at your option) any later version.
-#  
-#  PIU is distributed in the hope that it will be
-#  useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
-#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
-#  Public License for more details.
-#  
-#  You should have received a copy of the GNU General Public License along with
-#  PIU; if not, write to the Free Software
-#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA.
-#
-
-rdma_cm_query="/usr/sbin/rdma_cm_query"
-
-function usage
-{
-   	echo "$1 [-m <mlid>] <ibnode> [<ibnode>]"
-	echo "   trace the ib route from one node to another"
-	echo "   -h this help message"
-	echo "   -m <mlid> trace a multicast group route specified by mlid"
-}
-
-mcast_opt=""
-
-while getopts  "hm:" flag
-do
-   case $flag in
-      "h") usage $0; exit 0;;
-      "m") mcast_opt="-m $OPTARG";;
-   esac
-done
-
-shift $(($OPTIND - 1))
-
-node1=$1
-node2=$2
-
-if [ x$node1 == x ]; then
-	echo "ERROR: You must specify at least one node to \"trace to\""
-	usage $0
-	exit -1
-fi
-
-if [ x$node2 == x ]; then
-	node1lid=`ibstat | grep "Base lid" | sed -e "s/[ \t]*Base lid:[ \t]*\(.*\)/\1/"`
-	node2=$1
-else
-	node1lid=`$rdma_cm_query -L $node1`
-	rc=$?
-	if [ "$rc" != "0" ]; then
-		echo "Failed to resolve: \"$node1\""
-		exit $rc
-	fi
-fi
-
-node2lid=`$rdma_cm_query -L $node2`
-rc=$?
-if [ "$rc" != "0" ]; then
-	echo "Failed to resolve: \"$node2\""
-	exit $rc
-fi
-
-ibtracert $mcast_opt $node1lid $node2lid
